--- a/src/views/index.html
+++ b/src/views/index.html
@@ -117,8 +117,8 @@
     value: 208.28
   }
 ]
-  //var socket = io('http://192.168.1.212:4000');
-  var socket = io('localhost:4000');
+  var socket = io('http://192.168.1.212:4000');
+  //var socket = io('localhost:4000');
   socket.on('hello', function (data) {
     console.log(data);
 
@@ -172,16 +172,12 @@
 
   });
 
-
-
   function populate(selector,key,value) {
     $(selector)
       .append('<option value="'+ value +'">'+ key + '</option>')
   }
 
   $(document).ready(function() {
-
-    //console.log(heightmap);
     //populate drop downs with heaight values
     heightmap.forEach(function(item) {
         populate('#player1',item.key,item.value);
@@ -509,6 +505,12 @@
       socket.emit('startgame', { my: 'data' });
     });
 
+    $( "#rotate" ).click(function() {
+      console.log(rotate);
+      socket.emit('rotate', { my: 'data' });
+    });
+
+
     $( "#endgame" ).click(function() {
       socket.emit('endgame', { my: 'data' });
     });
@@ -563,6 +565,18 @@
       console.log("start");
       socket.emit('start', { my: 'data' });
     });
+    $( "#enablePerformer" ).click(function() {
+      console.log("enablePerformer");
+      socket.emit('enablePerformer', { my: 'data' });
+    });
+    $( "#disablePerformer" ).click(function() {
+      console.log("disablePerformer");
+      socket.emit('disablePerformer', { my: 'data' });
+    });
+    $( "#exitScene" ).click(function() {
+      console.log("exitScene");
+      socket.emit('exitScene', { my: 'data' });
+    });
   });
 </script>
 
@@ -593,6 +607,18 @@
 
     <button id="start" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent scenebutton">
       VOID
+    </button>
+
+    <button id="enablePerformer" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent scenebutton">
+      ENABLE PERFORMER
+    </button>
+
+    <button id="disablePerformer" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent scenebutton">
+      DISABLE PERFORMER
+    </button>
+
+    <button id="exitScene" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent scenebutton">
+      EXIT
     </button>
 </div>
 
