changed performer text to queen for consistency and removed toggle option for performer/queen since it was confused with the on/off function (LM)

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -841,11 +841,7 @@
 <!-- PERFORMER-->
 <div class="mdl-grid player">
   <div class="mdl-cell mdl-cell--1-col">
-    <b>Performer</b>
-    <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-5">
-  <input type="checkbox" id="switch-5" class="mdl-switch__input" >
-  <span class="mdl-switch__label"></span>
-</label>
+    <b>Queen</b>
   </div>
   <div class="mdl-cell mdl-cell--1-col" id="player5tracking">
     Tracking
