--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 .player {
-  background-color: gray;
+  background-color: #fff;
 }
 
 .scenebutton {
@@ -16,4 +16,25 @@
 .disabled-button {
   background-color: rgb(110, 150, 170)!important;
   color: #fff;
+}
+
+.content-grid {
+	max-width: 768px;
+}
+
+.mdl-grid {
+  padding: 0!important;
+}
+
+.header {
+	background-color: #ff4081;
+	color: #fff;
+}
+
+.guest-player {
+	text-align: center;
+}
+
+.player-data {
+	background-color: #e8e8e8;
 }
