--- a/src/views/guest.html
+++ b/src/views/guest.html
@@ -139,14 +139,6 @@
         });
 
         /* Update player names */
-        $("#id_of_textbox").keyup(function(event){
-          if(event.keyCode == 13){
-              $("#id_of_button").click();
-          }
-        });
-
-
-
         $('#player1-name-submit').on('click', function() {
           var name = $("#player1-name-text").val();
           $.ajax({
@@ -174,8 +166,89 @@
           });
           return false;
         });
+        $('#player2-name-submit').on('click', function() {
+          var name = $("#player2-name-text").val();
+          $.ajax({
+            url: '/setname',
+            type: 'POST',
+            dataType : "json",
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify(
+              {
+                "player" : 1,
+                "name" : name
+              }
+            ), // data as js object
+            success: function(result) {
+                console.log("ok " + result)
+            }
+          });
 
-        // update player heights
+          // update data view value
+          $.getJSON( ip + '/config' , function( data ) {
+            var playerData = data["PLAYERS"];
+
+            // display player heights from JSON file
+            $( '#player2-name' ).text(playerData[1].name);
+          });
+          return false;
+        });
+        $('#player3-name-submit').on('click', function() {
+          var name = $("#player3-name-text").val();
+          $.ajax({
+            url: '/setname',
+            type: 'POST',
+            dataType : "json",
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify(
+              {
+                "player" : 2,
+                "name" : name
+              }
+            ), // data as js object
+            success: function(result) {
+                console.log("ok " + result)
+            }
+          });
+
+          // update data view value
+          $.getJSON( ip + '/config' , function( data ) {
+            var playerData = data["PLAYERS"];
+
+            // display player heights from JSON file
+            $( '#player3-name' ).text(playerData[2].name);
+          });
+          return false;
+        });
+        $('#player4-name-submit').on('click', function() {
+          var name = $("#player4-name-text").val();
+          $.ajax({
+            url: '/setname',
+            type: 'POST',
+            dataType : "json",
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify(
+              {
+                "player" : 3,
+                "name" : name
+              }
+            ), // data as js object
+            success: function(result) {
+                console.log("ok " + result)
+            }
+          });
+
+          // update data view value
+          $.getJSON( ip + '/config' , function( data ) {
+            var playerData = data["PLAYERS"];
+
+            // display player heights from JSON file
+            $( '#player4-name' ).text(playerData[3].name);
+          });
+          return false;
+        });
+
+        /* Update player heights */
         $('#player1').on('change', function() {
           var height = this.value;
           $.ajax({
@@ -345,6 +418,12 @@
           $( '#player2-height' ).append(player2h);
           $( '#player3-height' ).append(player3h);
           $( '#player4-height' ).append(player4h);
+
+          // display player names from JSON file
+          $( '#player1-name' ).append(playerData[0].name);
+          $( '#player2-name' ).append(playerData[1].name);
+          $( '#player3-name' ).append(playerData[2].name);
+          $( '#player4-name' ).append(playerData[3].name);
         });
       });
     </script>
@@ -396,7 +475,10 @@
         2
       </div>
       <div class="mdl-cell mdl-cell--3-col">
-        <input type="text" name="player2-name">
+        <input type="text" name="name" id="player2-name-text">
+        <button id="player2-name-submit">
+          Enter
+        </button>
       </div>
       <div class="mdl-cell mdl-cell--3-col">
         <select class="mdl-selectfield__select" id="player2" name="player2">
@@ -420,7 +502,10 @@
         3
       </div>  
       <div class="mdl-cell mdl-cell--3-col">
-        <input type="text" name="player3-name">
+        <input type="text" name="name" id="player3-name-text">
+        <button id="player3-name-submit">
+          Enter
+        </button>
       </div>
       <div class="mdl-cell mdl-cell--3-col">
         <select class="mdl-selectfield__select" id="player3" name="player3">
@@ -444,7 +529,10 @@
         4
       </div>
       <div class="mdl-cell mdl-cell--3-col">
-        <input type="text" name="player4-name">
+        <input type="text" name="name" id="player4-name-text">
+        <button id="player4-name-submit">
+          Enter
+        </button>
       </div>
       <div class="mdl-cell mdl-cell--3-col">
         <select class="mdl-selectfield__select" id="player4" name="player4">
